// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAccount renders correctly 1`] = `
<div>
  <div
    class="nxrm-page"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nxrm-page-title"
      >
        <h1
          class="title"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-user fa-w-14 nx-icon"
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
              fill="currentColor"
            />
          </svg>
          <span
            class="nx-feature-name"
          >
            Account
          </span>
        </h1>
        <p
          class="description nx-feature-description"
        >
          Manage your account
        </p>
      </div>
    </div>
    <div
      class="nxrm-content-body nxrm-user-account"
    >
      <div
        class="nxrm-section nx-tile"
      >
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="userId"
          >
            Username
          </label>
          <input
            class="nxrm-textfield"
            disabled=""
            id="userId"
            name="userId"
            readonly=""
            type="text"
            value="admin"
          />
        </div>
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="firstName"
          >
            First Name
          </label>
          <input
            class="nxrm-textfield"
            id="firstName"
            name="firstName"
            required=""
            type="text"
            value="User"
          />
        </div>
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="lastName"
          >
            Last Name
          </label>
          <input
            class="nxrm-textfield"
            id="lastName"
            name="lastName"
            required=""
            type="text"
            value="Admin"
          />
        </div>
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="email"
          >
            Email
          </label>
          <input
            class="nxrm-textfield"
            id="email"
            name="email"
            required=""
            type="text"
            value="admin@example.com"
          />
        </div>
        <div
          class="nxrm-section-footer nx-tile-footer"
        >
          <button
            class="nx-btn nx-btn--primary"
            disabled=""
            type="input"
          >
            Save
          </button>
          <button
            class="nx-btn"
            disabled=""
            type="input"
          >
            Discard
          </button>
        </div>
      </div>
      <div
        class="nxrm-section nx-tile"
      >
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="passwordCurrent"
          >
            Current Password
          </label>
          <input
            class="nxrm-textfield invalid"
            id="passwordCurrent"
            name="passwordCurrent"
            type="password"
            value=""
          />
          <span
            class="nxrm-error-message"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon"
              data-icon="exclamation-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                fill="currentColor"
              />
            </svg>
            <span
              class="nxrm-error-message-text"
              tabindex="-1"
            >
               
              This field is required
               
            </span>
          </span>
        </div>
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="passwordNew"
          >
            New Password
          </label>
          <input
            class="nxrm-textfield invalid"
            id="passwordNew"
            name="passwordNew"
            type="password"
            value=""
          />
          <span
            class="nxrm-error-message"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon"
              data-icon="exclamation-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                fill="currentColor"
              />
            </svg>
            <span
              class="nxrm-error-message-text"
              tabindex="-1"
            >
               
              This field is required
               
            </span>
          </span>
        </div>
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="passwordNewConfirm"
          >
            New Password (Confirm)
          </label>
          <input
            class="nxrm-textfield invalid"
            id="passwordNewConfirm"
            name="passwordNewConfirm"
            type="password"
            value=""
          />
          <span
            class="nxrm-error-message"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-exclamation-circle fa-w-16 nx-icon"
              data-icon="exclamation-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
                fill="currentColor"
              />
            </svg>
            <span
              class="nxrm-error-message-text"
              tabindex="-1"
            >
               
              This field is required
               
            </span>
          </span>
        </div>
        <div
          class="nxrm-section-footer nx-tile-footer"
        >
          <button
            class="nx-btn nx-btn--primary"
            disabled=""
            type="input"
          >
            Change password
          </button>
          <button
            class="nx-btn"
            disabled=""
            type="input"
          >
            Discard password change
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserAccount renders correctly for an external user: externalUser 1`] = `
<div>
  <div
    class="nxrm-page"
  >
    <div
      class="nxrm-page-header"
    >
      <div
        class="nxrm-page-title"
      >
        <h1
          class="title"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-user fa-w-14 nx-icon"
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
              fill="currentColor"
            />
          </svg>
          <span
            class="nx-feature-name"
          >
            Account
          </span>
        </h1>
        <p
          class="description nx-feature-description"
        >
          Manage your account
        </p>
      </div>
    </div>
    <div
      class="nxrm-content-body nxrm-user-account"
    >
      <div
        class="nxrm-section nx-tile"
      >
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="userId"
          >
            Username
          </label>
          <input
            class="nxrm-textfield"
            disabled=""
            id="userId"
            name="userId"
            readonly=""
            type="text"
            value="externalUser"
          />
        </div>
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="firstName"
          >
            First Name
          </label>
          <input
            class="nxrm-textfield"
            disabled=""
            id="firstName"
            name="firstName"
            readonly=""
            type="text"
            value="External"
          />
        </div>
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="lastName"
          >
            Last Name
          </label>
          <input
            class="nxrm-textfield"
            disabled=""
            id="lastName"
            name="lastName"
            readonly=""
            type="text"
            value="User"
          />
        </div>
        <div
          class="field-wrapper"
        >
          <label
            class="field-wrapper-label"
            for="email"
          >
            Email
          </label>
          <input
            class="nxrm-textfield"
            disabled=""
            id="email"
            name="email"
            readonly=""
            type="text"
            value="externalUser@saml.com"
          />
        </div>
        <div
          class="nxrm-section-footer nx-tile-footer"
        >
          <button
            class="nx-btn nx-btn--primary"
            disabled=""
            type="input"
          >
            Save
          </button>
          <button
            class="nx-btn"
            disabled=""
            type="input"
          >
            Discard
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
